--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Dwarf Game</title>
-</head>
-<body>
+  </head>
+  <body>
     <canvas></canvas>
 
+    <script src="js/classes/player.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
