Added movement to the player

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <canvas></canvas>
 
+    <script src="js/event_listeners.js"></script>
     <script src="js/classes/player.js"></script>
     <script src="index.js"></script>
   </body>
