--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <canvas></canvas>
 
+    <script src="js/classes/Sprite.js"></script>
+    <script src="js/classes/Player.js"></script>
     <script src="js/event_listeners.js"></script>
-    <script src="js/classes/player.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
