--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Dwarf Game</title>
+    <style>
+      body {
+        background: black;
+      }
+    </style>
   </head>
   <body>
     <canvas></canvas>
